PW-56: Fix cards size and partners alignment

--- a/views/home/ReferencesSection/Partners/Partners.module.scss
+++ b/views/home/ReferencesSection/Partners/Partners.module.scss
@@ -10,19 +10,23 @@
     padding-bottom: rem-calc(80);
   }
 
-  .partnerImg {
-    max-width: rem-calc(60);
+  .partnerImgWrapper {
+    width: 100%;
 
-    @include media('sm') {
-      max-width: rem-calc(80);
-    }
+    .partnerImg {
+      max-width: rem-calc(60);
 
-    @include media('md') {
-      max-width: rem-calc(100);
-    }
+      @include media('sm') {
+        max-width: rem-calc(80);
+      }
 
-    @include media('lg') {
-      max-width: rem-calc(120);
+      @include media('md') {
+        max-width: rem-calc(100);
+      }
+
+      @include media('lg') {
+        max-width: rem-calc(120);
+      }
     }
   }
 }
