--- a/views/home/ReferencesSection/QuoteCards/QuoteCard/QuoteCard.module.scss
+++ b/views/home/ReferencesSection/QuoteCards/QuoteCard/QuoteCard.module.scss
@@ -2,27 +2,31 @@
   &.container {
     padding: rem-calc(20 0 50 25);
     display: inline-block;
-    max-width: 80%;
+    max-width: rem-calc(340);
     margin-right: rem-calc(32);
     white-space: normal;
     overflow: visible;
 
+    @include media('sm') {
+      max-width: rem-calc(450);
+    }
+
     @include media('md') {
       padding: rem-calc(40 0 60 80);
-      max-width: 70%;
+      max-width: rem-calc(640);
       margin-right: 6rem;
     }
 
     @include media('lg') {
       padding: rem-calc(50 0 80 120);
-      max-width: 70%;
+      max-width: rem-calc(700);
     }
 
     .textWrapper {
       max-width: 90%;
 
       @include media('md') {
-        max-width: 80%;
+        max-width: 85%;
       }
 
       .quotesIcon {
